# virtual_disk

./: readme.md
src/: CMakeLists.txt  buildcmake.sh
src/base/: base.h  cmd_def.h  config.h  env.cpp  env.h  errno.cpp  errno.h  macro.h  pack_def.h  platform.h  thread.cpp  thread.h
src/client/: client_cmd_adaptor.cpp  client_cmd_adaptor.h  client_io.cpp  client_io.h  client_parser.cpp  client_parser.h
src/cmd/: cmd_base.cpp  cmd_base.h  cmd_manager.cpp  cmd_manager.h
src/cmd/cmd_generalize/: cmd_cd.cpp  cmd_cd.h  cmd_cls.cpp  cmd_cls.h  cmd_copy.cpp  cmd_copy.h  cmd_del.cpp  cmd_del.h  cmd_dir.cpp  cmd_dir.h  cmd_exit.cpp  cmd_exit.h  cmd_help.cpp  cmd_help.h  cmd_load.cpp  cmd_load.h  cmd_md.cpp  cmd_md.h  cmd_mklink.cpp  cmd_mklink.h  cmd_move.cpp  cmd_move.h  cmd_rd.h  cmd_ren.cpp  cmd_ren.h  cmd_save.cpp  cmd_save.h
src/handle/: handle_disk_mirror.cpp  handle_disk_mirror.h  handle_file_sys.cpp  handle_file_sys.h  handle_serialize.h
src/handle/file_sys/: handle_aval_disk.cpp  handle_aval_disk.h  handle_catalog.cpp  handle_catalog.h  handle_disk_mirror.cpp  handle_disk_mirror.h
src/start/: start.cpp  start.h
src/tools/: date.cpp  date.h  deal_file.cpp  deal_file.h  deal_string.cpp  deal_string.h  logger.cpp  logger.h  serialize.cpp  serialize.h
虚拟磁盘需分设计/: pack_def.h  开发时间预估.txt  虚拟磁盘系统设计.doc  虚拟磁盘系统设计.eapx  虚拟磁盘需求分析.doc  虚拟磁盘项目需求文档.docx  说明.txt
